# indexedcp

./: .gitignore  COMPLETION-REPORT.md  D_indexcp.sqlite  D_test-indexeddbshim.sqlite  D_test-unencrypted.sqlite  INDEXEDDBSHIM-MIGRATION.md  README.md  TEST-SUITE.md  __sysdb__.sqlite  client.js  index.js  large-test-file.txt  myfile.txt  package-lock.json  package.json  server.js  test-file.txt
.attic/: README.md
docs/: ENCRYPTION-QUICKREF.md  ENCRYPTION-SUMMARY.md  ENCRYPTION.md  INDEXEDDBSHIM-IMPLEMENTATION.md  KEYSTORE-QUICKSTART.md  KEYSTORE-SUMMARY.md  MIGRATION-GUIDE.md  PATH-MODES.md  PHILOSOPHY.md  (+2 more)
python/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_client.py  test_indexeddb.py  test_integration.py  test_server.py
python/demo/: DEMO_README.md  client_demo.py  sample_file.txt  server_demo.py
python/examples/: client_demo.py  client_example.py  complete_demo.py  logger_demo.py  server_basic.py  server_custom_filename.py  server_demo.py  server_simple.py  storage_demo.py  streaming_example.py
python/indexedcp/: __init__.py  client.py  indexeddb.py  server.py
python/src/indexedcp/: __init__.py  client.py  crypto_utils.py  logger.py  server.py
python/src/indexedcp/keystores/: __init__.py  base_keystore.py  filesystem_keystore.py
python/src/indexedcp/storage/: __init__.py  base_storage.py  sqlite_storage.py
python/tests/: __init__.py  test_basic.py  test_client.py  test_client_basic.py  test_client_upload.py  test_crypto.py  test_integration.py  test_keystore.py  test_logger.py  test_server.py  test_storage.py
(+43 files in other folders)
